Version 2.0.1
Bug fixes:
- Scanning through not-annotated classes
- And some massive bugs! =]